--- a/src/sass/components/article.scss
+++ b/src/sass/components/article.scss
@@ -42,6 +42,11 @@
         color: $red;
         font-size: 30px;
         padding: 25px;
+
+        @media all and ($mobile_mq) {
+            font-size: 20px;
+            padding: 15px;
+        }
     }
 
     &__meta__author, &__meta__date {
@@ -50,6 +55,7 @@
 
         @media all and ($mobile_mq) {
             margin-left: 25px;
+            font-size: 12px;
         }
     }
 
